syntax = "proto3";

package sem.middleware.thinking_mode;

option go_package = "github.com/go-go-golems/pinocchio/cmd/web-chat/thinkingmode/pb;thinkingmodepb";

import "google/protobuf/struct.proto";

// Payload for thinking mode messages
message ThinkingModePayload {
  string mode = 1;
  string phase = 2;
  string reasoning = 3;
  // Additional unstructured data from extractor
  google.protobuf.Struct extra_data = 10;
}

message ThinkingModeStarted {
  string item_id = 1;
  ThinkingModePayload data = 2;
}

message ThinkingModeUpdate {
  string item_id = 1;
  ThinkingModePayload data = 2;
}

message ThinkingModeCompleted {
  string item_id = 1;
  ThinkingModePayload data = 2;
  bool success = 3;
  string error = 4;
}


